# ipc_linux_showcase

./: CMakeLists.txt  README.md
cmake/: install_cpm_packages.cmake  utility.cmake
consumer/: CMakeLists.txt
consumer/src/: main.cpp
consumer/src/consume/: Consumer.cpp
lib/consumer/: CMakeLists.txt
lib/consumer/include/consume/: Consumer.hpp
lib/consumer/src/consume/: Consumer.cpp
lib/producer/: CMakeLists.txt
lib/producer/include/produce/: Producer.hpp
lib/producer/src/produce/: Producer.cpp
producer/: CMakeLists.txt
producer/src/: main.cpp
producer/src/produce/: Producer.cpp
src/: main.cpp
